Import of FRACTAL/Unicode-Truncate-0.101.tar.gz from CPAN.
gitpan-cpan-distribution: Unicode-Truncate
gitpan-cpan-version:      0.101
gitpan-cpan-path:         FRACTAL/Unicode-Truncate-0.101.tar.gz
gitpan-cpan-author:       FRACTAL
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,2 +1,7 @@
+0.101   2014-12-30
+  * Use Inline::Module's new "bundle => 0" feature (thanks Ingy)
+  * Tweak docs a bit
+  * dev prereqs
+
 0.100   2014-12-30
   * Initial CPAN release
